# build-moat-project

./: .gitignore  README.md
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/list/: page.tsx
frontend/src/app/qr/: page.tsx
frontend/src/app/qr/list/: page.tsx
frontend/src/components/features/home/: ModuleCard.tsx
frontend/src/components/features/qr/: QrAnalyticsModal.tsx  QrCreateForm.tsx  QrEditModal.tsx  QrListTable.tsx  QrResult.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  CopyText.tsx  Input.tsx  Modal.tsx
frontend/src/hooks/: useQrCode.ts  useQrList.ts
frontend/src/lib/: apiClient.ts  qrSchemas.ts  queryClient.ts  utils.ts
frontend/src/services/: qrService.ts
frontend/src/types/: qr.ts
qr_code_genrator /: Cargo.toml  README.md  docker-compose.yml
qr_code_genrator /migrations/: 20260425090430_init.sql
qr_code_genrator /src/: config.rs  db.rs  dto.rs  main.rs  models.rs  state.rs
qr_code_genrator /src/routes/: analytics.rs  create.rs  manage.rs  mod.rs  redirect.rs
qr_code_genrator /src/utils/: mod.rs  qr.rs  token.rs  validator.rs
