[package]
name = "mark_qr_code_genrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio",
  "uuid",
  "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenv = "0.15"
url = "2"
qrcode-generator = "4"
